--- a/requirements.txt
+++ b/requirements.txt
@@ -1,229 +1,3 @@
-_libgcc_mutex=0.1=conda_forge
-_openmp_mutex=4.5=1_gnu
-_tflow_select=2.3.0=mkl
-abseil-cpp=20210324.1=h9c3ff4c_0
-absl-py=0.12.0=pyhd8ed1ab_0
-aiohttp=3.7.4=py37h5e8e339_0
-argon2-cffi=20.1.0=py37h5e8e339_2
-arrow-cpp=4.0.0=py37h1686cbf_2_cpu
-astunparse=1.6.3=pyhd8ed1ab_0
-async-timeout=3.0.1=py_1000
-async_generator=1.10=py_0
-attrs=21.2.0=pyhd8ed1ab_0
-aws-c-cal=0.5.7=h3622835_1
-aws-c-common=0.5.11=h7f98852_0
-aws-c-event-stream=0.2.7=h4d4ce33_4
-aws-c-io=0.9.11=h6e5a149_3
-aws-checksums=0.1.11=hc0e0e8b_6
-aws-sdk-cpp=1.8.186=h9ad65fb_2
-backcall=0.2.0=pyh9f0ad1d_0
-backports=1.0=py_2
-backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-blas=1.0=openblas
-bleach=3.3.0=pyh44b312d_0
-blinker=1.4=py_1
-boost-cpp=1.69.0=h11c811c_1000
-brotli=1.0.9=he1b5a44_3
-brotlipy=0.7.0=py37h5e8e339_1001
-bzip2=1.0.8=h516909a_3
-c-ares=1.17.1=h36c2ea0_0
-ca-certificates=2021.4.13=h06a4308_1
-cachetools=4.2.2=pyhd8ed1ab_0
-certifi=2020.12.5=py37h06a4308_0
-cffi=1.14.5=py37hc58025e_0
-chardet=4.0.0=py37h89c1867_1
-click=7.1.2=pyh9f0ad1d_0
-cloudpickle=1.6.0=py_0
-cryptography=3.4.7=py37h5d9358c_0
-cycler=0.10.0=py37_0
-dbus=1.13.6=h48d8840_2
-decorator=4.4.2=py_0
-defusedxml=0.7.1=pyhd8ed1ab_0
-double-conversion=3.1.5=he1b5a44_2
-elephas=1.1.0=pyhd8ed1ab_0
-entrypoints=0.3=pyhd8ed1ab_1003
-expat=2.3.0=h9c3ff4c_0
-flask=1.1.2=pyh9f0ad1d_0
-fontconfig=2.13.1=hba837de_1005
-freetype=2.10.4=h0708190_1
-future=0.18.2=py37h89c1867_3
-gast=0.4.0=pyh9f0ad1d_0
-gettext=0.19.8.1=h0b5b191_1005
-gflags=2.2.2=he1b5a44_1004
-glib=2.68.1=h9c3ff4c_0
-glib-tools=2.68.1=h9c3ff4c_0
-glog=0.4.0=h49b9bf7_3
-google-auth=1.30.0=pyh44b312d_0
-google-auth-oauthlib=0.4.1=py_2
-google-pasta=0.2.0=pyh8c360ce_0
-grpc-cpp=1.37.1=h2519f57_2
-grpcio=1.37.1=py37hb27c1af_0
-gst-plugins-base=1.14.0=hbbd80ab_1
-gstreamer=1.14.0=h28cd5cc_2
-h5py=2.10.0=nompi_py37ha3df211_106
-hdf5=1.10.6=nompi_h3c11f04_101
-hyperas=0.4.1=pyh8c360ce_1
-hyperopt=0.2.5=pyh9f0ad1d_0
-icu=58.2=hf484d3e_1000
-idna=2.10=pyh9f0ad1d_0
-importlib-metadata=4.0.1=py37h89c1867_0
-ipykernel=5.5.4=py37h085eea5_0
-ipython=7.23.1=py37h085eea5_0
-ipython_genutils=0.2.0=py_1
-ipywidgets=7.6.3=pyhd3deb0d_0
-itsdangerous=1.1.0=py_0
-jedi=0.18.0=py37h89c1867_2
-jinja2=2.11.3=pyh44b312d_0
-jpeg=9d=h36c2ea0_0
-jsonschema=3.2.0=pyhd8ed1ab_3
-jupyter=1.0.0=py37h89c1867_6
-jupyter_client=6.1.12=pyhd8ed1ab_0
-jupyter_console=6.4.0=pyhd8ed1ab_0
-jupyter_core=4.7.1=py37h89c1867_0
-jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
-jupyterlab_widgets=1.0.0=pyhd8ed1ab_1
-keras=2.4.3=0
-keras-base=2.4.3=py_0
-keras-preprocessing=1.1.2=pyhd8ed1ab_0
-kiwisolver=1.3.1=py37h2531618_0
-krb5=1.17.2=h926e7f8_0
-lcms2=2.12=h3be6417_0
-ld_impl_linux-64=2.33.1=h53a641e_7
-libblas=3.9.0=8_openblas
-libcblas=3.9.0=8_openblas
-libcurl=7.76.1=hc4aaa36_1
-libedit=3.1.20191231=he28a2e2_2
-libev=4.33=h516909a_1
-libevent=2.1.10=hcdb4288_3
-libffi=3.3=he6710b0_2
-libgcc-ng=9.3.0=h2828fa1_19
-libgfortran-ng=7.5.0=h14aa051_19
-libgfortran4=7.5.0=h14aa051_19
-libglib=2.68.1=h3e27bee_0
-libgomp=9.3.0=h2828fa1_19
-libgpuarray=0.7.6=h14c3975_1003
-libiconv=1.16=h516909a_0
-liblapack=3.9.0=8_openblas
-libnghttp2=1.43.0=h812cca2_0
-libopenblas=0.3.12=pthreads_hb3c22a3_1
-libpng=1.6.37=h21135ba_2
-libprotobuf=3.16.0=h780b84a_0
-libsodium=1.0.18=h36c2ea0_1
-libssh2=1.9.0=ha56f1ee_6
-libstdcxx-ng=9.3.0=h6de172a_19
-libthrift=0.14.1=he6d91bd_1
-libtiff=4.1.0=h2733197_1
-libutf8proc=2.6.1=h7f98852_0
-libuuid=2.32.1=h7f98852_1000
-libxcb=1.13=h7f98852_1003
-libxml2=2.9.10=hb55368b_3
-lz4-c=1.9.3=h2531618_0
-mako=1.1.4=pyh44b312d_0
-markdown=3.3.4=pyhd8ed1ab_0
-markupsafe=1.1.1=py37h5e8e339_3
-matplotlib=3.3.4=py37h06a4308_0
-matplotlib-base=3.3.4=py37h62a2d02_0
-matplotlib-inline=0.1.2=pyhd8ed1ab_2
-mistune=0.8.4=py37h5e8e339_1003
-multidict=5.1.0=py37h5e8e339_1
-nbclient=0.5.3=pyhd8ed1ab_0
-nbconvert=6.0.7=py37h89c1867_3
-nbformat=5.1.3=pyhd8ed1ab_0
-ncurses=6.2=he6710b0_1
-nest-asyncio=1.5.1=pyhd8ed1ab_0
-networkx=2.5.1=pyhd8ed1ab_0
-notebook=6.3.0=pyha770c72_1
-numpy=1.20.2=py37h038b26d_0
-oauthlib=3.0.1=py_0
-olefile=0.46=py37_0
-openssl=1.1.1k=h27cfd23_0
-opt_einsum=3.3.0=pyhd8ed1ab_1
-orc=1.6.7=h89a63ab_2
-packaging=20.9=pyh44b312d_0
-pandas=1.2.4=py37h219a48f_0
-pandoc=2.12=h7f98852_0
-pandocfilters=1.4.2=py_1
-parquet-cpp=1.5.1=2
-parso=0.8.2=pyhd8ed1ab_0
-pcre=8.44=he1b5a44_0
-pexpect=4.8.0=pyh9f0ad1d_2
-pickleshare=0.7.5=py_1003
-pillow=8.2.0=py37he98fc37_0
-pip=21.1.1=pyhd8ed1ab_0
-prometheus_client=0.10.1=pyhd8ed1ab_0
-prompt-toolkit=3.0.18=pyha770c72_0
-prompt_toolkit=3.0.18=hd8ed1ab_0
-protobuf=3.16.0=py37hcd2ae1e_0
-pthread-stubs=0.4=h36c2ea0_1001
-ptyprocess=0.7.0=pyhd3deb0d_0
-py4j=0.10.9=pyh9f0ad1d_0
-pyarrow=4.0.0=py37he2832ee_2_cpu
-pyasn1=0.4.8=py_0
-pyasn1-modules=0.2.7=py_0
-pycparser=2.20=pyh9f0ad1d_2
-pygments=2.9.0=pyhd8ed1ab_0
-pyjwt=2.1.0=pyhd8ed1ab_0
-pymongo=3.11.0=py37hcd2ae1e_4
-pyopenssl=20.0.1=pyhd8ed1ab_0
-pyparsing=2.4.7=pyh9f0ad1d_0
-pyqt=5.9.2=py37hcca6a23_4
-pyrsistent=0.17.3=py37h5e8e339_2
-pysocks=1.7.1=py37h89c1867_3
-pyspark=3.1.1=pyhd3eb1b0_0
-python=3.7.10=hdb3f193_0
-python-dateutil=2.8.1=py_0
-python-flatbuffers=2.0=pyhd8ed1ab_0
-python_abi=3.7=1_cp37m
-pytz=2021.1=pyhd8ed1ab_0
-pyyaml=5.4.1=py37h5e8e339_0
-pyzmq=22.0.3=py37h336d617_1
-qt=5.9.7=h5867ecd_1
-qtconsole=5.1.0=pyhd8ed1ab_0
-qtpy=1.9.0=py_0
-re2=2021.04.01=h9c3ff4c_0
-readline=8.1=h27cfd23_0
-requests=2.25.1=pyhd3deb0d_0
-requests-oauthlib=1.3.0=pyh9f0ad1d_0
-rsa=4.7.2=pyh44b312d_0
-s2n=1.0.6=h9b69904_0
-scipy=1.6.2=py37hf56f3a7_1
-seaborn=0.11.1=pyhd3eb1b0_0
-send2trash=1.5.0=py_0
-setuptools=49.6.0=py37h89c1867_3
-sip=4.19.8=py37hf484d3e_0
-six=1.16.0=pyh6c4a22f_0
-snappy=1.1.8=he1b5a44_3
-sqlite=3.35.4=hdfb4753_0
-tensorboard=2.4.1=pyhd8ed1ab_0
-tensorboard-plugin-wit=1.8.0=pyh44b312d_0
-tensorflow=2.4.1=mkl_py37h2d14ff2_0
-tensorflow-base=2.4.1=mkl_py37h43e0292_0
-tensorflow-estimator=2.4.1=pyheb71bc4_0
-termcolor=1.1.0=py_2
-terminado=0.9.4=py37h89c1867_0
-testpath=0.4.4=py_0
-tk=8.6.10=hbc83047_0
-tornado=6.1=py37h5e8e339_1
-tqdm=4.60.0=pyhd8ed1ab_0
-traitlets=5.0.5=py_0
-typing-extensions=3.7.4.3=0
-typing_extensions=3.7.4.3=py_0
-tzdata=2020f=h52ac0ba_0
-uriparser=0.9.3=he1b5a44_1
-urllib3=1.26.4=pyhd8ed1ab_0
-utf8proc=2.6.1=h27cfd23_0
-wcwidth=0.2.5=pyh9f0ad1d_2
-webencodings=0.5.1=py_1
-werkzeug=1.0.1=pyh9f0ad1d_0
-wheel=0.36.2=pyhd3eb1b0_0
-widgetsnbextension=3.5.1=py37h89c1867_4
-wrapt=1.12.1=py37h5e8e339_3
-xorg-libxau=1.0.9=h7f98852_0
-xorg-libxdmcp=1.1.3=h7f98852_0
-xz=5.2.5=h7b6447c_0
-yaml=0.2.5=h516909a_0
-yarl=1.6.3=py37h5e8e339_1
-zeromq=4.3.4=h9c3ff4c_0
-zipp=3.4.1=pyhd8ed1ab_0
-zlib=1.2.11=h7b6447c_3
-zstd=1.4.9=ha95c52a_0
+pyspark
+keras
+elephas
